--- a/abstract.tex
+++ b/abstract.tex
@@ -1,13 +1,19 @@
 Abstract:
-	The Home Decorum Augmented Reality project, currently unnamed, is a software application to be built for the
-HoloLens platform, Microsoft's new wearable AR headset. The application primarily focuses on providing a 3D model
-of specific floor fixtures and furniture available for purchase in a catalogue to allow the user to better visualize
-any home improvement selections before making a purchase. The mission of the project is to provide users a more
-immersive experience and relay as much information before making a purchase. The target user story involves the HoloLens
-scanning a QR code placed beside a particular item in a catalogue. This QR code is mapped to a pre-generated 3D holographic 
-model, which will be fetched and rendered in the field of view of the HoloLens. Then, using common, pre-defined gestures,
-such as air-tapping, and pinching, the user will be able to interact with the model, by re-sizing, moving and pinning the
-object hologram. Ultimately, the aim is to increase user adoption and educate users with the interface so they become
-more comfortable with this new technology. As a result this same workflow, will also be applied to children's stories, 
-where a QR code on the page can be scanned to display a 3D model of a character in the story (e.g. Winnie the Pooh).
-We plan on working with RONA Inc. home improvement catalogues to select items for which 3D models will be available.
+	Ikea, the world's largest furniture retailer maintains multiple commerce channels for consumers
+in print, online, and in stores with ~200 million printed catalogues, >700 million store visits,
+and >2 billion visits to ikea.com. The largest of the three, e-commerce yielding a rate of returns
+of ~10 percent, three times higher than that of transactions made at brick-and-mortar stores. This
+difference is attributed to the consumer being less informed about the product at the time of
+purchase when shopping for furniture online, leading to dissatisfaction with the size, aesthetics
+or decorum compatibility with the furniture post-transaction.
+	This project utilizes augmented reality software on the Hololens platform to provide better spatial
+and aesthetic information about the retail products in the Ikea catalogue, making remote e-commerce
+on parity with in-store visits and decrease information asymmetry. This provides users a more
+immersive experience and convenient relays spatial information before transactions without the need
+for premature shipment, assembly or furniture movement/placement, ultimately reducing the rate of
+returns/exchanges.
+	The user's interactions in selecting, moving and pinning the holographic 3D models will be observed to
+determine the efficacy of the software in assisting the consumer in selecting the most suitable product.
+This is measured by the percent of users in the study able to identify the appropriate furniture to purchase
+using the software versus looking at static images and text. The ease of use and perusal time for user's
+interacting with the software is also measured to evaluate likelihood of adoption.
